syntax = "proto3";
option go_package = "github.com/my-epoch/storage_service/gen";
package storage_service_api;

import "google/api/annotations.proto";
import "google/api/httpbody.proto";

// I know that its stupid, I will redo this later
message Base64FileUploadRequest {
  string base64_file_encoded = 1;
}

message FileUploadResponse {
  string uuid = 1;
  uint32 size = 2;
}

message GetRawFileRequest {
  string uuid = 1;
}

service StorageServiceAPI {
  rpc UploadBase64EncodedFile(Base64FileUploadRequest) returns (FileUploadResponse) {
    option (google.api.http) = {
      post: "/api/v1/storage/base64"
      body: "*"
    };
  }

  rpc GetRawFile(GetRawFileRequest) returns (google.api.HttpBody) {
    option (google.api.http) = {
      get: "/api/v1/storage/{uuid}"
    };
  }
}